--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         augue laoreet Quisque euismod ipsum. Vel velit nec
                         rhoncus nibh facilisi sagitis Vestibulum Ut Proin sit.
                         Aenean.
-                        <img class="img__paints" src="/img/pic1.jpg" alt="paints" width="400px">
+                        <img class="img__paints" src="img/pic1.jpg" alt="paints" width="400px">
                         Sit egestas eros felis Sed cursus nunc congue molestie
                         Curabitur hendrerit. Sit quis quis vitae laoreet quis
                         Curabitur dolor at Curabitur laoreet.
@@ -69,7 +69,7 @@
                 <div class="main__container">
                     <div class="products">
                         <div class="main__product">
-                            <img src="/img/pic2.jpg" alt="paints">
+                            <img src="img/pic2.jpg" alt="paints">
                             <a href="#">CURSUS NUNC CONGUE</a>
                             <p class="product__description">Pellentesque enim at adipiscing Sed ac vestibulum commodo
                                 vel sem enim...</p>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="products">
                         <div class="main__product">
-                            <img src="/img/pic3.jpg" alt="paints">
+                            <img src="img/pic3.jpg" alt="paints">
                             <a href="#">QUIS QUIS VITAE LAOREET</a>
                             <p class="product__description">Psit amet consectetuer dolor quam tortor lorem urna mmodo
                                 vel sem en...</p>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="products">
                         <div class="main__product">
-                            <img src="/img/pic4.jpg" alt="paints">
+                            <img src="img/pic4.jpg" alt="paints">
                             <a href="#">CURABITUR LAOREET</a>
                             <p class="product__description">Sit egestas eros felis Sed cursus nunc congue molestie
                                 Curabitur hendrerit...</p>
